# new3dengine

./: Cargo.toml  README.md
assets/shaders/fragment_shaders/: depth_frag.glsl  frag_shader.glsl  phong_frag.glsl
assets/shaders/vertex_shaders/: depth_vert.glsl  phong_vert.glsl  vert_shader.glsl
src/: main.rs  mesh_loader.rs
src/engine/: client.rs  fps.rs  mod.rs  server.rs
src/rendering/: draw.rs  mod.rs  uniform.rs
src/scene/: camera.rs  light.rs  mod.rs  object.rs  view_object.rs
src/types/: mod.rs
